--- a/info.html
+++ b/info.html
@@ -4,28 +4,7 @@
 
 	<title>About - Alyssa Leo</title>
 
-	<!-- NAV BAR -->
-	<nav class="navbar sticky-top navbar-expand-xl justify-content-center">
-		<div class="nav-item active">
-			<a class="nav-link text-dark" href="index.html">Home</a>
-		</div>
 
-		<div class="nav-item">
-			<a class="nav-link text-dark" href="index.html">Photography</a>
-		</div>
-
-		<div class="navbar-brand">
-			<img href="#home" src="images/logo_label.png" alt="Alyssa Leo" height="100" width="150">
-		</div>
-
-		<div class="nav-item active">
-			<a class="nav-link text-dark" href="index.html">Videography</a>
-		</div>
-
-		<div class="nav-item active">
-			<a class="nav-link text-dark" href="info.html">About</a>
-		</div>
-	</nav>
 
 </head>
     <meta charset="utf-8">
@@ -48,7 +27,28 @@
 
     
 <body data-spy="scroll" data-target=".navbar" data-offset="50">
+	<!-- NAV BAR -->
+	<nav class="navbar navbar-expand-xl justify-content-center" id="mainNav">
+		<div class="nav-item active">
+			<a class="nav-link text-dark" href="index.html">Home</a>
+		</div>
 
+		<div class="nav-item">
+			<a class="nav-link text-dark" href="index.html">Photography</a>
+		</div>
+
+		<div class="navbar-brand">
+			<img href="#home" src="images/logo_label.png" alt="Alyssa Leo" height="100" width="150">
+		</div>
+
+		<div class="nav-item active">
+			<a class="nav-link text-dark" href="index.html">Videography</a>
+		</div>
+
+		<div class="nav-item active">
+			<a class="nav-link text-dark" href="info.html">About</a>
+		</div>
+	</nav>
 
 	<div class="container">
 		<div class="row">
@@ -96,7 +96,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-lg-4">
-					<span>Copyright © Ayssa Leo</span>
+					<span>Copyright © Alyssa Leo</span>
 					<span> // </span>
 					Site by <a style="color: white" href="http://jacobrobinett.com/"target="_blank">Jacob Robinett</a>
 				</div>
