--- a/home.html
+++ b/home.html
@@ -95,7 +95,7 @@ a:hover {
 -->
 
 <!-- TOP NAVIGATION -->
-<nav class="navbar sticky-top navbar-expand-lg navbar-light bg-light">
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
 	<!-- <a class="navbar-brand" href="#">Navbar w/ text</a> -->
 		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
 			<span class="navbar-toggler-icon"></span>
