perfect locally does not work on oucreate.. yet

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 		</div>
 
 		<div class="nav-item">
-			<h1 class="font_playfair">Alyssa Leo<br><span2 class="font_shopping">photography</span2>	</h1>
+			<h1 class="font_playfair">ALYSSA LEO<br><span2 class="font_shopping">photography</span2></h1>
 		</div>
 
 		<div class="navbar-brand">
@@ -147,7 +147,7 @@
 		<div class="row">
 			<div class="col-lg-4 pl-7 pr-7">
 				<span>
-					<a href="images/CO.png" data-lightbox="gallery">
+					<a href="images/Tai_USE.jpg" data-lightbox="gallery">
 						<img class="img-grid" src="images/Tai_USE.jpg" alt="1">
 					</a>
 				</span>
@@ -155,7 +155,7 @@
 
 			<div class="col-lg-4 pl-7 pr-7">
 				<span>
-					<a href="images/CO.png" data-lightbox="gallery">
+					<a href="images/IMG_0426.jpg" data-lightbox="gallery">
 						<img class="img-grid" src="images/IMG_0426.jpg" alt="1">
 					</a>
 				</span>
@@ -163,7 +163,7 @@
 
 			<div class="col-lg-4 pl-7 pr-7">
 				<span>
-					<a href="images/CO.png" data-lightbox="gallery">
+					<a href="images/LoneCoyote.jpg" data-lightbox="gallery">
 						<img class="img-grid" src="images/LoneCoyote.jpg" alt="1">
 					</a>
 				</span>
@@ -178,7 +178,7 @@
 		<div class="row">
 			<div class="col-lg-4 pl-7 pr-7">
 				<span>
-					<a href="images/CO.png" data-lightbox="gallery">
+					<a href="images/IMG_1070-3.jpg" data-lightbox="gallery">
 						<img class="img-grid" src="images/IMG_1070-3.jpg" alt="1">
 			 		</a>
 				</span>
@@ -186,7 +186,7 @@
 
 			<div class="col-lg-4 pl-7 pr-7">
 				<span>
-					<a href="images/CO.png" data-lightbox="gallery">
+					<a href="images/peacock.jpg" data-lightbox="gallery">
 						<img class="img-grid" src="images/peacock.jpg" alt="1">
 					</a>
 				</span>
@@ -194,7 +194,7 @@
 
 			<div class="col-lg-4 pl-7 pr-7">
 				<span>
-					<a href="images/CO.png" data-lightbox="gallery">
+					<a href="images/CuriousCoyotes.jpg" data-lightbox="gallery">
 						<img class="img-grid" src="images/CuriousCoyotes.jpg" alt="1">
 					</a>
 				</span>
@@ -208,7 +208,7 @@
 		<div class="row">
 			<div class="col-lg-4 pl-7 pr-7">
 				<span>
-					<a href="images/CO.png" data-lightbox="gallery">
+					<a href="images/puddles.jpg" data-lightbox="gallery">
 						<img class="img-grid" src="images/puddles.jpg" alt="1">
 			 		</a>
 				</span>
@@ -216,7 +216,7 @@
 
 			<div class="col-lg-4 pl-7 pr-7">
 				<span>
-					<a href="images/CO.png" data-lightbox="gallery">
+					<a href="images/albinopeacock.jpg" data-lightbox="gallery">
 						<img class="img-grid" src="images/albinopeacock.jpg" alt="1">
 					</a>
 				</span>
@@ -224,7 +224,7 @@
 
 			<div class="col-lg-4 pl-7 pr-7">
 				<span>
-					<a href="images/CO.png" data-lightbox="gallery">
+					<a href="images/IMG_0449.jpg" data-lightbox="gallery">
 						<img class="img-grid" src="images/IMG_0449.jpg" alt="1">
 					</a>
 				</span>
@@ -238,7 +238,7 @@
 		<div class="row">
 			<div class="col-lg-4 pl-7 pr-7">
 				<span>
-					<a href="images/CO.png" data-lightbox="gallery">
+					<a href="images/IMG_0473.jpg" data-lightbox="gallery">
 						<img class="img-grid" src="images/IMG_0473.jpg" alt="1">
 			 		</a>
 				</span>
@@ -246,7 +246,7 @@
 
 			<div class="col-lg-4 pl-7 pr-7">
 				<span>
-					<a href="images/CO.png" data-lightbox="gallery">
+					<a href="images/LukeShadowUSE.jpg" data-lightbox="gallery">
 						<img class="img-grid" src="images/LukeShadowUSE.jpg" alt="1">
 					</a>
 				</span>
@@ -254,7 +254,7 @@
 
 			<div class="col-lg-4 pl-7 pr-7">
 				<span>
-					<a href="images/CO.png" data-lightbox="gallery">
+					<a href="images/pkitty.jpg" data-lightbox="gallery">
 						<img class="img-grid" src="images/pkitty.jpg" alt="1">
 					</a>
 				</span>
@@ -268,7 +268,7 @@
 		<div class="row">
 			<div class="col-lg-4 pl-7 pr-7">
 				<span>
-					<a href="images/CO.png" data-lightbox="gallery">
+					<a href="images/Swift Fox portrait-1.jpg" data-lightbox="gallery">
 						<img class="img-grid" src="images/Swift Fox portrait-1.jpg" alt="1">
 			 		</a>
 				</span>
@@ -276,7 +276,7 @@
 
 			<div class="col-lg-4 pl-7 pr-7">
 				<span>
-					<a href="images/CO.png" data-lightbox="gallery">
+					<a href="images/puddles bucket1.jpg" data-lightbox="gallery">
 						<img class="img-grid" src="images/puddles bucket1.jpg" alt="1">
 					</a>
 				</span>
@@ -284,7 +284,7 @@
 
 			<div class="col-lg-4 pl-7 pr-7">
 				<span>
-					<a href="images/CO.png" data-lightbox="gallery">
+					<a href="images/puddles1.jpg" data-lightbox="gallery">
 						<img class="img-grid" src="images/puddles1.jpg" alt="1">
 					</a>
 				</span>
@@ -298,7 +298,7 @@
 		<div class="row">
 			<div class="col-lg-4 pl-7 pr-7">
 				<span>
-					<a href="images/CO.png" data-lightbox="gallery">
+					<a href="images/LukeLickUSE.jpg" data-lightbox="gallery">
 						<img class="img-grid" src="images/LukeLickUSE.jpg" alt="1">
 			 		</a>
 				</span>
@@ -306,7 +306,7 @@
 
 			<div class="col-lg-4 pl-7 pr-7">
 				<span>
-					<a href="images/CO.png" data-lightbox="gallery">
+					<a href="images/LukePortraitUSE.jpg" data-lightbox="gallery">
 						<img class="img-grid" src="images/LukePortraitUSE.jpg" alt="1">
 					</a>
 				</span>
