last edits before submission

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 
 	
 
-<div id="home" class="jumbotron-fluid text-center header-custom" style="height: 100vh;"> <!-- Change from jumbotron to "containter"/"container-fluid" for correct color -->
+<div id="home" class="jumbotron-fluid container text-center header-custom" style="height: 100vh;"> <!-- Change from jumbotron to "containter"/"container-fluid" for correct color -->
 	
 	<!-- Testing css fonts for the logo 
 
@@ -334,7 +334,7 @@
 			<!-- Escape Fire -->
 			<div class="col-lg-6">
 				<div class="embed-responsive embed-responsive-16by9">
-	  				<iframe class="embed-responsive-item" src="https://www.youtube.com/embed/zpOULjyy-n8?rel=0"></iframe>
+	  				<iframe class="embed-responsive-item" src="https://www.youtube.com/embed/qc1UvJaYaOk"></iframe>
 				</div>
 			</div>
 
