--- a/info.html
+++ b/info.html
@@ -52,10 +52,10 @@
 
 	<div class="container">
 		<div class="row">
-			<div class="col-lg-1">
+			<div class="col-lg-3">
 			</div>
-			<div class="col-lg-9">
-				<img style="width: 100%;" src="images/CO.png">
+			<div class="col-lg-7">
+				<img style="width: 50%;" src="images/bio.jpeg">
 			</div>
 			<div class="col-lg-1">
 			</div>
@@ -74,7 +74,11 @@
 			</div>
 			<div class="col-lg-6">
 				<p1>
-					Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
+					Alyssa Leo uses her camera to bring the world as she sees it onto a screen. She has always been a dreamer: never one to sit still and accept things as they are. After discovering that she had the ability to bring her daydreams to life through a lens, she attended the University of Oklahoma with a major in Creative Media Production and a minor in Spanish, where she will graduate with a BA in Journalism in May 2019.<br><br>
+
+					Alyssa’s time spent working at the Oklahoma City Zoo as the Digital Media Intern showed her exactly where her strongest passions lie: connecting her skills in media with her passion for environmental and nonprofit work. Her love of animals and the outdoors has always been her most consistent interest - naturally, she wants to give back to the world that she uses as inspiration, and hopes to find a career where she can conserve and protect nature through media.<br><br>
+
+					Alyssa’s work has won several awards - in 2017, her script entitled “Anna” won first place in the OBEA Scriptwriting competition. In 2018, she was the cinematographer for her class project “When Two Become One” won an Award of Excellence at BEA and first place in the PSA category at OBEA.
 				</p1>
 			</div>
 			<div class="col-lg-6">
