--- a/index.html
+++ b/index.html
@@ -14,9 +14,13 @@
 			<a class="nav-link text-dark" href="#photography">Photography</a>
 		</div>
 
+	<!-- STATIC MIDDLE HEADER -->
+	
 		<div class="nav-item">
 			<h1 class="font_playfair">ALYSSA LEO<br><span2 class="font_shopping">photography</span2></h1>
 		</div>
+
+	
 
 		<div class="navbar-brand">
 			<img href="#home" src="images/logo_label.png" alt="Alyssa Leo" height="100" width="150">
@@ -91,7 +95,8 @@
 
 	
 
-<div id="home" class="jumbotron-fluid container text-center header-custom" style="height: 100vh;"> <!-- Change from jumbotron to "containter"/"container-fluid" for correct color -->
+<div id="home" class="jumbotron-fluid container text-center header-custom" style="height: 100vh; background-image: url(images/home.jpg);";
+"> <!-- Change from jumbotron to "containter"/"container-fluid" for correct color -->
 	
 	<!-- Testing css fonts for the logo 
 
@@ -101,13 +106,13 @@
 	-->
 </div>
 
-<div class="container">
-	<div class="row">
-		<div class="col-lg-12">
-			<br>
+	<div class="container">
+		<div class="row">
+			<div class="col-lg-12">
+				<br>
+			</div>
 		</div>
 	</div>
-</div>
 
 	<!-- ROW 1 -->	
 	<div id="photography" class="container-fluid padding_bottom"> <!--add "-fluid" to stretch grid page width -->	
@@ -123,16 +128,16 @@
 
 			<div class="col-lg-4 pl-7 pr-7">
 				<span>
-					<a href="images/SmilingHeadUp.jpg" data-lightbox="gallery">
-						<img class="img-grid" src="images/SmilingHeadUp.jpg" alt="1">
+					<a href="images/GroupInteract.jpg" data-lightbox="gallery">
+						<img class="img-grid" src="images/SmilingHeadUp.jpg" alt="telsa">
 					</a>
 				</span>
 			</div>
 
 			<div class="col-lg-4 pl-7 pr-7">
 				<span>
-					<a href="images/puddles bucket2.jpg" data-lightbox="gallery">
-						<img class="img-grid" src="images/puddles bucket2.jpg" alt="1">
+					<a href="images/GroupInteract.jpg" data-lightbox="gallery">
+						<img class="img-grid" src="images/puddles bucket2.jpg" alt="telsa">
 					</a>
 				</span>
 			</div>
